--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -8,3 +8,10 @@ body {
     padding: 0;
     box-sizing: border-box;
 }
+
+.logo {
+    color: black;
+    text-decoration: none;
+    font-weight: bolder;
+    line-height: 50px;
+}
