--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -12,6 +12,8 @@ ul {
     margin: 0;
     padding: 0;
     float: right;
+
+    position: relative;
 }
 
 ul li {
@@ -29,7 +31,46 @@ ul li a {
 
 
 
+// submenu
+ul ul {
+    position: absolute;
+    background-color: white;
+    min-width: 170px;
 
+    display: none;
+}
+
+ul ul li {
+    padding: 0.5em;
+    display: block;
+    font-size: 14px;
+    transition: all 300ms ease-in-out;
+}
+
+ul ul li:hover {
+    background-color: rgb(236, 236, 236);
+}
+
+
+
+
+ul li:hover ul {
+    transition: all 10s ease-in-out;
+    display: block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+// class
 .nav_desktop.active {
     transform: translateY(0vh);
 }
