--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -18,7 +18,7 @@ $mobile: 425px;
 
         .nav_desktop {
             padding: 0;
-            transform: translateY(-100vh);
+            transform: translateY(-150vh);
             transition: all 300ms ease-in-out;
             position: relative;
 
@@ -36,6 +36,18 @@ $mobile: 425px;
 
                     a {
                         padding: 0;
+                    }
+                }
+
+                ul {
+                    position: static;
+                    background-color: rgb(236, 236, 236);
+
+                    li {
+                        a {
+                            font-size: 13px;
+                            line-height: 40px;
+                        }
                     }
                 }
             }
