--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -47,17 +47,7 @@ ul ul li {
     transition: all 300ms ease-in-out;
 }
 
-ul ul li:hover {
-    background-color: rgb(236, 236, 236);
-}
 
-
-
-
-ul li:hover ul {
-    transition: all 10s ease-in-out;
-    display: block;
-}
 
 
 
@@ -73,4 +63,8 @@ ul li:hover ul {
 // class
 .nav_desktop.active {
     transform: translateY(0vh);
+}
+
+.nav_link.active .submenu {
+    display: block;
 }
