--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,5 @@
 $mobile: 425px;
+$laptop: 1050px;
 
 @mixin mobile {
     @media(max-width: #{$mobile}) {
@@ -11,6 +12,21 @@ $mobile: 425px;
         @content;
     }
 }
+
+
+@mixin laptop {
+    @media(min-width: #{$laptop}) {
+        @content;
+    }
+}
+
+
+
+
+
+
+
+
 
 @include mobile {
     nav {
@@ -62,6 +78,14 @@ $mobile: 425px;
 }
 
 @include tablet {
+    nav {
+        ul li:active ul {
+            display: block;
+        }
+    }
+}
+
+@include laptop {
     nav {
         ul li:hover ul {
             display: block;
